updating paper files

--- a/Kubinec Owen APSA 2017 Islamist-Secularist Polarization.tex
+++ b/Kubinec Owen APSA 2017 Islamist-Secularist Polarization.tex
@@ -33,7 +33,7 @@
 
 \linespread{1.5}
 
-\title{Islamist-Secularist Protest during the Arab Uprising}
+\title{A Richter Scale for Cross-National Polarization: Islamist-Secularist Protest during the Arab Uprising}
 
 \begin{document}
 
@@ -52,9 +52,9 @@ Group polarization is situational and hence may be short-lived; it is different 
 
 Its situational quality, specifically its dependence on exogenous events, makes group polarization impossible to predict, but therefore especially helpful in understanding complex chains of events such as the Arab Uprising.  The group-polarization approach presupposes, with a long tradition in social theory, that people have multiple group affiliations; that belonging to one group entails defining oneself over against one or more alternative groups; that for a given individual at a given time a particular group affiliation may be more or less salient; and that individuals respond to signals of friendship and hostility from one another; and hence that populations sometimes polarize along one axis of identity, temporarily submerging other axes of identity.  Of particular interest in the Arab Uprising are (1) cross-polarization, or the shift from polarization along one axis (e.g., pro- versus anti-regime) to polarization along a cross-cutting axis (e.g., Islamist versus secularist), and (2) transnational polarization, i.e., simultaneous polarization along an identity axis in two countries.
 
-Group polarization is a phenomenon of changing sentiment, identity, and preference.  Measuring it with rigor has been difficult, and thus so has testing claims about what triggers it and what suppresses it.  The growing use of social media, the availability of the resulting data, and advances in computing power, however, combine to allow researchers to measure changes in group polarization over time.  In this paper, we present analysis of Twitter data during 2013 in Egypt and Tunisia.  We choose this time period because Egypt went through a number of political events that seem prime candidates for triggers of group polarization.  Most obvious is the July 3 coup d'état in which secularist military officers overthrew the elected government of Mohamed Morsi of the Muslim Brotherhood.  Other potentially polarizing events include clashes between Muslims and Christians in al-Khousos on April 6-7; Morsi's appointment of seven new governors from the Muslim Brotherhood on June 16; and the military government's violent dispersal of pro-Morsi demonstrators in Cairo on August 14 (Daily News Egypt, https://dailynewsegypt.com/2013/08/14/live-updates-pro-morsi-sit-ins-dispersed/, retrieved on 11 August 2017.) 
+Group polarization is a phenomenon of changing sentiment, identity, and preference.  Measuring it with rigor has been difficult, and thus so has testing claims about what triggers it and what suppresses it.  The growing use of social media, the availability of the resulting data, and advances in computing power, however, combine to allow researchers to measure changes in group polarization over time.  In this paper, we present analysis of Twitter data during 2013 in Egypt and Tunisia.  We choose this time period because Egypt went through a number of political events that seem prime candidates for triggers of group polarization.  Most obvious is the July 3 coup d'état in which secularist military officers overthrew the elected government of Mohamed Morsi of the Muslim Brotherhood, and in our models we specifically test for the effect of this coup on endogenous polarization, and we find that it has a statistically discernible long-term effect on the diffusion of ideological polarization across countries. At the same time, our model identifies other important polarizing events, some of which we identified beforehand, such as the military government's violent dispersal of pro-Morsi demonstrators in Cairo on August 14 (Daily News Egypt, https://dailynewsegypt.com/2013/08/14/live-updates-pro-morsi-sit-ins-dispersed/, retrieved on 11 August 2017), but others which we did not, including the promulgation of a draft constitution in Tunisia that undermined secularist notions of human rights \parencite{hrw2013}. In fact, our models show that these constitutional changes were the single most influential events during this time period, shifting the relative positions of ideological actors to a greater extent even than Morsi's coup.
 
-This paper presents a Bayesian item response theory model that incorporates feedback loops between ideological groups through the use of co-integrated time-series priors on latent variables that represent the ideological positions. The item response theory model has been widely used to study social and group polarization, but we are the first to show how to explicitly model feedback by proposing that similar cross-country ideological groups will tend to show auto-correlated trends over time. In other words, we expect that the differences between the ideological positions of secularists in Egypt and secularists in Tunisia will be roughly proportional (i.e., stationary) over time, while the same condition will hold for Islamists in both countries. Based on this assumption, we can then model the divergence between these groups as a function of both within-country and between-country polarization.
+In addition to our empirical and theoretical contribution, we make a methodological contribution by presenting a model that can incorporate both measurement uncertainty in using Twitter data and time-series feedback effects. To do so, we designed a Bayesian item response theory-vector autoregressive (IRT-VAR) model that includes feedback loops between ideological groups through the use of auto-regressive priors on latent variables that represent the distance between ideological groups across space. The item response theory model has been widely used to study social and group polarization, but we are the first to show how to explicitly model feedback by proposing that similar cross-country ideological groups will tend to show auto-correlated trends over time. In other words, we expect that the ideological positions of secularists in Egypt and secularists in Tunisia will tend to be stationary over time, while the same condition will hold for Islamists in both countries. Based on this assumption, we can then model the divergence between these groups as a function of both within-country and between-country polarization, as well as directly test for the effect of exogenous events on the latent position of ideological actors relative to each other.
 
 In what follows, we explicate the logic of group polarization in an informal model.  We include propositions about de-polarization and cross-polarization.  We offer hypotheses about group polarization, and explain and defend our use of tweets in Egypt and Tunisia in 2013.  We present the statistical model and data analysis.  We close with thoughts for future research.
 
@@ -98,19 +98,21 @@ Social-psychological literature notes that people vary by level of commitment to
 It stands to reason that the low-commitment actors posited by Ellemers et al. would behave like Smith's ``rational" actors.
 In sum, an exogenous event that either raises the prestige of social group $A$ or threatens group $A$ may cause people who belong to multiple overlapping groups $A$ through $Z$ to identify more strongly with $A$ and against $\neg A$ and less with $B$ and against $\neg B$, etc.  Increases in status and in threats may be simultaneous:  an increase in $A$'s status may simultaneously threaten members of $\neg A$ and thus cause them to identify more as $\neg A$s and against group $A$.  Large public anti-government demonstrations, as take place during a typical political spring, can both raise the status of being anti-government and simultaneously threaten those who identify with the government.  And again, polarization tends to feed on itself:  as members of $A$ observe members of $\neg A$ identifying more as $\neg A$s, members of $A$ will identify still more strongly with $A$; and so on. 
 
+For that reason, we are interested in establishing that, in general, cross-national ideological groups do react each other's latent polarization, that relatively exogenous events like the coup against Muhammed Morsi in July of 2013 will increase this polarization, and that these exogenous events also induce endogenous polarization as groups polarization increases in response to their ideological allies' polarization.
+
 \section*{Hypotheses}
 
-We propose to test the following hypotheses based on this theory:
+As such, we propose to test the following hypotheses based on this theory:
 
 \begin{tabular}{lp{15cm}}
-	H1 & After polarizing events, the difference in latent ideological positions between competing groups will diverge from each other very quickly.\\
-	H2 & After polarizing events, cross-national ideological groups will tend to increase within-country polarization in response to events occurring in the other country.\\
-	H3 & After polarizing events, ideological groups in other countries will become more sensitive to changes in the position of their like-minded actors in other countries.
+	H1 & As the latent ideological position of Islamists or secularists changes, the latent ideological position in the like-minded group in the other state will also change.\\
+	H2 & After the coup against Mohammed Morsi, the difference in latent ideological positions between Islamists and secularists will diverge in direct reaction to the coup (direct effect).\\
+	H3 & After the coup against Mohammed Morsi, the difference in latent ideological positions between Islamists and secularists will diverge from each group's reaction to their ideological allies' shift in latent ideological position (indirect effect).
 \end{tabular}
 
-We can operationalize these hypotheses by estimating ideological position as a latent ideal point that can vary over time. For these reasons, we collected data on ideological actors in Egypt and Tunisia from Twitter, as we described in the next section. For hypotheses 2 and 3, we need to have summary statistics that look at patterns of ideological interaction across countries and see if these summary statistics change as a result of the polarizing event of interest. 
+We can operationalize these hypotheses by estimating ideological position as a latent ideal point that can vary over time. For these reasons, we collected data on ideological actors in Egypt and Tunisia from Twitter, as we described in the next section. To test these hypotheses, we need to be able to trace out the endogenous processes of polarization.
 
-The primary event we are most interested in is the coup that overthrew President Mohammed Morsi in July of 2013 as it represented a clear division between secularists and Islamists. Other polarizing events occurred during this period and previous to our period of data collection, but we focus our attention on the coup because it represents the event of highest salience, representing full forced regime change that removed Islamists from power and ended democratization in Egypt.
+The primary event we are most interested in is the coup that overthrew President Mohammed Morsi in July of 2013 as it represented a clear division between secularists and Islamists. Other polarizing events occurred and our model should be able to identify them, but we focus our attention a priori on the coup because it represents the event of highest salience, representing full forced regime change that removed Islamists from power and ended democratization in Egypt.
  
 \section*{Data Collection}
 Analyzing these phenomena quantitatively is difficult because we need good measures of ideology across countries that also varies over time. The advent of social media during the Arab Uprisings provides some of the first available data that we can use to examine the predictions of the theory. We chose to use Twitter due to its public nature and the ability to closely track elite users, or those users with a large number of followers. We built a sample of Egyptian and Tunisian twitter users that are broadly representative of political thinking \& discourse within these countries.
@@ -141,11 +143,14 @@ We focus on the Islamist-secularist distinction in this paper because there are 
 
 With this finished list of 155 elite users, we then collected their full tweet histories from March 31st, 2013 to December 31st, 2013. This 1.7 million list of tweets was then filtered down to 1.2 million tweets that constitute each user's own composed tweets by removing all of each user's retweets. Using Twitter's open API, the retweets of all of these 1.2 million original tweets was then downloaded as a list of user IDs for each user per day for a total of 275 days. The use of the open API represents a limitation in the data collection because only 100 re-tweets of a given retweet may be downloaded; however, this limit was rarely reached in practice because very few of the tweets in question had more than 100 retweets. Even ex-President Mohammed Morsi, who has more than a million twitter followers, averaged only a few hundred re-tweets per tweet during 2013. Nonetheless, this data must still be understood as a sample of the full number of retweets, especially for users with a very large popular following.
 
-The final database comprises a set of elites $j$ and citizens $i$ in which the outcome is the number of times that $i$ retweeted $j$ for each three-day in the sample. Three-day periods were chosen because it helps to address weekend seasonality (any particular period could fall on any part of the week), and because it results in a reasonable 92 time points in our sample. We took these retweets and we calculated how many times a specific user/citizen retweeted each elite within the three-day window. We then appended this data together for all the elites in our sample. We removed all citizens who did not re-tweet at least three different elites during the entire time period, resulting in a final dataset of 1,835,824 citizen-elite interactions with a total of 96,848 unique citizen Twitter users, or an average of 43 retweets per user of elites during the sample period. We do not include zeroes in the dataset for periods when a user did not re-tweet an elite because we do not know if a user saw a tweet and chose not to re-tweet or whether they never saw the tweet in question. For that reason, we would prefer to include only observed data in the model, while making the assumption that users would be equally likely to re-tweet similar ideological elites conditional on the users seeing these tweets.
+The final database comprises a set of elites $j$ and citizens $i$ in which the outcome is the number of times that $i$ retweeted $j$ for each 24-period in the sample. We took these retweets and we calculated how many times a specific user/citizen retweeted each elite within the 24-hour period. We then appended this data together for all the elites in our sample. We removed all citizens who did not re-tweet at least three different elites during the entire time period, resulting in a final dataset of 1,835,824 citizen-elite interactions with a total of 96,848 unique citizen Twitter users, or an average of 43 retweets per user of elites during the sample period. We then expanded this dataset by including all absent interactions in the dataset; i.e., for every 24-period, we include zeroes for all elites which a citizen did not retweet. This dramatically expands the size of the data to 19,933,100 observed and possible interactions. Including zeroes is important so that we do not assume that each citizen had an equal chance of retweeting all the elite Twitter accounts in the sample.
 
 The set of elites is further divided into four groups based on the RA coding: Islamists in Egypt and Tunisia versus secularists in Egypt and Tunisia. We can then think of each group having an average position in an ideological ideal point space that varies over the number of days in the sample. We do not account for the pro- and anti-democracy axis, so for that reason these estimates implicitly average over this cleavage within ideological groups.
 
 \section*{Modeling Ideological Polarization Over Time}
+
+We are not the first to collect and analyze Twitter data on polarization, including in the Middle East. Rather, our primary contribution in the modeling of polarization is in our modeling strategy, which incorporates both uncertainty over the underlying measures of inter-group distance and 
+
 To adequately model these phenomena, we combine two distinct literatures in statistics: time-series econometrics, in particular co-integrated equations, with the item-response theory literature on estimating latent concepts. Item-response theory has been used in political science for estimating the latent positions of actors based on roll-call voting datasets \parencite{jackman2004}, and more recently, through social media and campaign finance contributions \parencite{bonica2014,barbera2015}. Item-response theory (IRT) has also been applied to difficult measurement problems, in particular the construction of democratization indices from a variety of coding sources \parencite{vdem2017,treier2008}. Item response models estimate latent traits for individual cases that can be divided into two distinct groups, such as raters and countries, lawmakers and bills, or in our sample, citizens and elites. 
 
 What is crucial about these models is that the latent estimates are unobserved. For that reason, there is a strong connection between IRT and factor analysis \parencite{takane1986}, and similar concerns over the interpretation of the latent scores are justified. The latent dimension estimated by an IRT model will be the lowest-variance explanation of the observed data, but further prior knowledge and post-estimation validation is necessary to confirm that the results correspond with the concept of interest. We are confident in our application of this technique to the data because of our prior coding of users into similar ideological groups. For that reason, the resulting estimates will reflect these latent cleavages instead of arbitrary social behaviors or groupings.
