update file and finish on the mac

--- a/Kubinec Owen 2018 Islamist-Secularist Polarization Draft III.tex
+++ b/Kubinec Owen 2018 Islamist-Secularist Polarization Draft III.tex
@@ -373,155 +373,7 @@ This research opens the door to further exploration of the determinants and meas
 
 \section*{Appendix A: List of Elites}
 
-\begin{longtable}{rllll}
-	\hline
-	& Username & Secularist/Islamist & Pro/Anti Democracy & Country \\ 
-	\hline
-	1 & slim404 & Secularist & Pro Dem. & Tunisia \\ 
-	2 & ooouups & Secularist & Pro Dem. & Tunisia \\ 
-	3 & nawaat & Secularist & Pro Dem. & Tunisia \\ 
-	4 & psycke & Secularist & Pro Dem. & Tunisia \\ 
-	5 & karim2k & Secularist & Pro Dem. & Tunisia \\ 
-	6 & riadheh & Secularist & Pro Dem. & Tunisia \\ 
-	7 & mira404 & Secularist & Pro Dem. & Tunisia \\ 
-	8 & yassayari & Secularist & Pro Dem. & Tunisia \\ 
-	9 & ka33boura & Secularist & Pro Dem. & Tunisia \\ 
-	10 & sarah\_bh & Secularist & Pro Dem. & Tunisia \\ 
-	11 & majdikhan & Secularist & Pro Dem. & Tunisia \\ 
-	12 & maramirou & Secularist & Pro Dem. & Tunisia \\ 
-	13 & marwen & Secularist & Pro Dem. & Tunisia \\ 
-	14 & benmhennilina & Secularist & Pro Dem. & Tunisia \\ 
-	15 & slimazzabi & Islamist & Pro Dem. & Tunisia \\ 
-	16 & jnayna & Secularist & Pro Dem. & Tunisia \\ 
-	17 & azyyoz & Secularist & Pro Dem. & Tunisia \\ 
-	18 & arabasta1 & Secularist & Pro Dem. & Tunisia \\ 
-	19 & zinga\_ & Secularist & Pro Dem. & Tunisia \\ 
-	20 & c\_moii & Secularist & Pro Dem. & Tunisia \\ 
-	21 & jasmintn & Secularist & Pro Dem. & Tunisia \\ 
-	22 & sans\_url & Secularist & Anti Dem. & Tunisia \\ 
-	23 & indigo\_light & Islamist & Pro Dem. & Tunisia \\ 
-	24 & takriz & Secularist & Pro Dem. & Tunisia \\ 
-	25 & sameh\_b & Secularist & Pro Dem. & Tunisia \\ 
-	26 & nayzek & Secularist & Pro Dem. & Tunisia \\ 
-	27 & liliopatra & Secularist & Pro Dem. & Tunisia \\ 
-	28 & eyaturki & Secularist & Pro Dem. & Tunisia \\ 
-	29 & faiyla & Secularist & Pro Dem. & Tunisia \\ 
-	30 & zizoo & Secularist & Pro Dem. & Tunisia \\ 
-	31 & amal\_haouet & Islamist & Pro Dem. & Tunisia \\ 
-	32 & houeida & Islamist & Pro Dem. & Tunisia \\ 
-	33 & malekk & Secularist & Pro Dem. & Tunisia \\ 
-	34 & ahlemhc & Secularist & Anti Dem. & Tunisia \\ 
-	35 & tom\_z & Secularist & Anti Dem. & Tunisia \\ 
-	36 & chiheb12 & Secularist & Pro Dem. & Tunisia \\ 
-	37 & al\_pacino\_ & Secularist & Pro Dem. & Tunisia \\ 
-	38 & zeinebturki & Secularist & Pro Dem. & Tunisia \\ 
-	39 & khamousss & Secularist & Pro Dem. & Tunisia \\ 
-	40 & may\_mouna & Secularist & Pro Dem. & Tunisia \\ 
-	41 & yamenbousrih & Secularist & Anti Dem. & Tunisia \\ 
-	42 & ifikra & Secularist & Pro Dem. & Tunisia \\ 
-	43 & r\_ghannouchi & Islamist & Pro Dem. & Tunisia \\ 
-	44 & nahdhatunisie & Islamist & Pro Dem. & Tunisia \\ 
-	45 & ali\_larayedh & Islamist & Pro Dem. & Tunisia \\ 
-	46 & yusraghkh & Islamist & Pro Dem. & Tunisia \\ 
-	47 & ziedladhari & Islamist & Pro Dem. & Tunisia \\ 
-	48 & bassemloukil & Secularist & Anti Dem. & Tunisia \\ 
-	49 & mehdi\_jomaa & Secularist & Anti Dem. & Tunisia \\ 
-	50 & jasminef\_tn & Islamist & Pro Dem. & Tunisia \\ 
-	51 & alaa & Secularist & Pro Dem. & Egypt \\ 
-	52 & waelabbas & Secularist & Pro Dem. & Egypt \\ 
-	53 & ghonim & Secularist & Pro Dem. & Egypt \\ 
-	54 & nawaranegm & Secularist & Pro Dem. & Egypt \\ 
-	55 & sandmonkey & Secularist & Pro Dem. & Egypt \\ 
-	56 & elbaradei & Secularist & Pro Dem. & Egypt \\ 
-	57 & zeinobia & Secularist & Pro Dem. & Egypt \\ 
-	58 & 3arabawy & Secularist & Pro Dem. & Egypt \\ 
-	59 & amrmsalama & Secularist & Pro Dem. & Egypt \\ 
-	60 & monasosh & Secularist & Pro Dem. & Egypt \\ 
-	61 & kalimakhus & Secularist & Pro Dem. & Egypt \\ 
-	62 & drbassemyoussef & Secularist & Pro Dem. & Egypt \\ 
-	63 & belalfadl & Secularist & Pro Dem. & Egypt \\ 
-	64 & gamaleid & Secularist & Pro Dem. & Egypt \\ 
-	65 & salmaeldaly & Secularist & Pro Dem. & Egypt \\ 
-	66 & yosrifouda & Secularist & Pro Dem. & Egypt \\ 
-	67 & wael & Secularist & Pro Dem. & Egypt \\ 
-	68 & monaeltahawy & Secularist & Pro Dem. & Egypt \\ 
-	69 & alyaagad & Secularist & Pro Dem. & Egypt \\ 
-	70 & galalamer & Secularist & Pro Dem. & Egypt \\ 
-	71 & amrwaked & Secularist & Pro Dem. & Egypt \\ 
-	72 & mand0z & Secularist & Pro Dem. & Egypt \\ 
-	73 & adel\_salib & Secularist & Pro Dem. & Egypt \\ 
-	74 & hazem\_azim & Secularist & Pro Dem. & Egypt \\ 
-	75 & ahmadesseily & Secularist & Pro Dem. & Egypt \\ 
-	76 & zeinabsamir & Secularist & Pro Dem. & Egypt \\ 
-	77 & lilianwagdy & Islamist & Pro Dem. & Egypt \\ 
-	78 & 5orm & Secularist & Pro Dem. & Egypt \\ 
-	79 & sarahcarr & Secularist & Pro Dem. & Egypt \\ 
-	80 & gsquare86 & Secularist & Pro Dem. & Egypt \\ 
-	81 & minazekri & Secularist & Pro Dem. & Egypt \\ 
-	82 & ahmednaguib & Secularist & Anti Dem. & Egypt \\ 
-	83 & gemyhood & Islamist & Pro Dem. & Egypt \\ 
-	84 & shokeir & Secularist & Pro Dem. & Egypt \\ 
-	85 & heshoz & Secularist & Anti Dem. & Egypt \\ 
-	86 & mennagamal & Islamist & Pro Dem. & Egypt \\ 
-	87 & theboghdady & Secularist & Pro Dem. & Egypt \\ 
-	88 & seksek & Secularist & Pro Dem. & Egypt \\ 
-	89 & sarahngb & Secularist & Pro Dem. & Egypt \\ 
-	90 & thebigpharaoh & Secularist & Pro Dem. & Egypt \\ 
-	91 & h\_eid & Secularist & Pro Dem. & Egypt \\ 
-	92 & lastoadri & Secularist & Pro Dem. & Egypt \\ 
-	93 & rashapress & Secularist & Pro Dem. & Egypt \\ 
-	94 & minanaguib90 & Secularist & Pro Dem. & Egypt \\ 
-	95 & ahmad\_khalil & Secularist & Pro Dem. & Egypt \\ 
-	96 & naguibsawiris & Secularist & Pro Dem. & Egypt \\ 
-	97 & mazloum & Secularist & Pro Dem. & Egypt \\ 
-	98 & nabilelhalfawy & Secularist & Pro Dem. & Egypt \\ 
-	99 & theadly & Secularist & Pro Dem. & Egypt \\ 
-	100 & thesherio & Secularist & Pro Dem. & Egypt \\ 
-	101 & kalnaga & Secularist & Pro Dem. & Egypt \\ 
-	102 & dr\_heba\_raouf & Secularist & Pro Dem. & Egypt \\ 
-	103 & moftasa & Secularist & Pro Dem. & Egypt \\ 
-	104 & ahmdalish & Secularist & Pro Dem. & Egypt \\ 
-	105 & theonlywarman & Secularist & Pro Dem. & Egypt \\ 
-	106 & pakinamamer & Secularist & Pro Dem. & Egypt \\ 
-	107 & zelaky & Islamist & Pro Dem. & Egypt \\ 
-	108 & embee & Secularist & Pro Dem. & Egypt \\ 
-	109 & ahmada2 & Secularist & Pro Dem. & Egypt \\ 
-	110 & ramiii & Secularist & Pro Dem. & Egypt \\ 
-	111 & mar3e & Secularist & Pro Dem. & Egypt \\ 
-	112 & alaaaswany & Secularist & Pro Dem. & Egypt \\ 
-	113 & alienzero & Secularist & Pro Dem. & Egypt \\ 
-	114 & salmasaid & Secularist & Pro Dem. & Egypt \\ 
-	115 & i3atef & Secularist & Pro Dem. & Egypt \\ 
-	116 & loainagati & Secularist & Pro Dem. & Egypt \\ 
-	117 & memam8 & Secularist & Pro Dem. & Egypt \\ 
-	118 & ayaabdullah & Secularist & Pro Dem. & Egypt \\ 
-	119 & bassem\_sabry & Secularist & Pro Dem. & Egypt \\ 
-	120 & bothainakamel1 & Secularist & Pro Dem. & Egypt \\ 
-	121 & tarekshalaby & Secularist & Pro Dem. & Egypt \\ 
-	122 & m3adel & Secularist & Pro Dem. & Egypt \\ 
-	123 & malek & Secularist & Pro Dem. & Egypt \\ 
-	124 & etharkamal & Islamist & Pro Dem. & Egypt \\ 
-	125 & ssirgany & Secularist & Pro Dem. & Egypt \\ 
-	126 & \_\_safi\_\_ & Secularist & Pro Dem. & Egypt \\ 
-	127 & hfakhry & Secularist & Pro Dem. & Egypt \\ 
-	128 & hamzanamira & Secularist & Pro Dem. & Egypt \\ 
-	129 & asmaamahfouz & Secularist & Pro Dem. & Egypt \\ 
-	130 & egyptocracy & Secularist & Pro Dem. & Egypt \\ 
-	131 & nasry & Secularist & Pro Dem. & Egypt \\ 
-	132 & themiinz & Islamist & Pro Dem. & Egypt \\ 
-	133 & muhammadmorsi & Islamist & Pro Dem. & Egypt \\ 
-	134 & ikhwanweb & Islamist & Pro Dem. & Egypt \\ 
-	135 & mushaweh & Islamist & Pro Dem. & Egypt \\ 
-	136 & azzaelgarf & Islamist & Pro Dem. & Egypt \\ 
-	137 & asmaaghazalll & Islamist & Pro Dem. & Egypt \\ 
-	138 & alnourpartyeg & Islamist & Anti Dem. & Egypt \\ 
-	139 & yonosmakhyoun & Islamist & Anti Dem. & Egypt \\ 
-	140 & naderbakkar & Islamist & Pro Dem. & Egypt \\ 
-	141 & gelhaddad & Islamist & Pro Dem. & Egypt \\ 
-	142 & alqaradawy & Islamist & Pro Dem. & Egypt \\ 
-	\hline
-	\hline
-\end{longtable}
+\include{list_elites.tex}
 
 \section*{Appendix B: Simulation Study of IRT-VAR}
 
